// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PieChart > renders correctly when legend is focused 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #641cb3;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.emotion-20 {
  margin-left: 6px;
  font-weight: 500;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-28 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #0083e6;
}

.emotion-32 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.emotion-36 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-38 {
  margin-left: 6px;
  font-weight: 400;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-compute"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-compute"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Compute
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-24 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-gpu"
            />
            <div
              class="emotion-28 emotion-11"
              color="#0083e6"
              id="chart-legend-gpu"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-32 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-36 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-38 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly when legend is hovered 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #641cb3;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.emotion-20 {
  margin-left: 6px;
  font-weight: 500;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-28 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #0083e6;
}

.emotion-32 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.emotion-36 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-38 {
  margin-left: 6px;
  font-weight: 400;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-compute"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-compute"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Compute
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-24 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-gpu"
            />
            <div
              class="emotion-28 emotion-11"
              color="#0083e6"
              id="chart-legend-gpu"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-32 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-36 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-38 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly with data 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly with data and content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  display: inline-block;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  font-size: 25px;
  line-height: 100px;
  height: 100px;
  width: 100px;
  margin: auto;
  text-align: center;
  vertical-align: middle;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="emotion-2 emotion-3"
        >
          Test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly with detailed legend 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-20 {
  margin-left: 6px;
  font-weight: 400;
}

.emotion-28 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #0083e6;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-compute"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-compute"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Compute
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-gpu"
            />
            <div
              class="emotion-28 emotion-11"
              color="#0083e6"
              id="chart-legend-gpu"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly with detailed legend and discount 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-20 {
  margin-left: 6px;
  font-weight: 400;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M-1.3667058278484462e-14,-74.4A74.4,74.4,0,1,0,1.3667058278484462e-14,74.4A74.4,74.4,0,1,0,-1.3667058278484462e-14,-74.4Z"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-discount"
          aria-describedby="chart-legend-discount"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-discount"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-discount"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly with empty legend placeholder 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 20px;
}

.emotion-4 {
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M-1.3667058278484462e-14,-74.4A74.4,74.4,0,1,0,1.3667058278484462e-14,74.4A74.4,74.4,0,1,0,-1.3667058278484462e-14,-74.4Z"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          I am a legend
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly with legend 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.emotion-2 {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
  width: 100%;
  color: #3f4250;
}

.emotion-8 {
  width: 250px;
  height: 21px;
  position: absolute;
}

.emotion-10 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #5e47be;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-14 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.emotion-16 {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.emotion-18 {
  border-bottom: 1px solid #8c40ef;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.emotion-20 {
  margin-left: 6px;
  font-weight: 400;
}

.emotion-28 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #0083e6;
}

.emotion-46 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #3ebd8f;
}

.emotion-64 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #ac2740;
}

.emotion-82 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #9a85ec;
}

.emotion-100 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #ff602e;
}

.emotion-118 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #483800;
}

.emotion-136 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #02a5ad;
}

.emotion-154 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #ffa488;
}

.emotion-172 {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 0.5rem;
  background: #96edf2;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,53.81979226115179,-75.84477543619248L42.88613309329479,-60.7958846329602A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
                <path
                  d="M55.501437463108275,-74.62298867995493A93,93,0,0,1,88.12156703782944,-29.725232089881683L70.43053488282992,-23.977067296032654A74.4,74.4,0,0,0,44.567778295251266,-59.574097876722654Z"
                  fill="#0083e6"
                  opacity="1"
                  stroke="rgb(0, 92, 161)"
                  stroke-width="0"
                />
                <path
                  d="M88.76389834795864,-27.748339591284847A93,93,0,0,1,88.76389834795864,27.748339591284847L71.07286619295911,22.000174797435825A74.4,74.4,0,0,0,71.07286619295911,-22.000174797435825Z"
                  fill="#3ebd8f"
                  opacity="1"
                  stroke="rgb(43, 132, 100)"
                  stroke-width="0"
                />
                <path
                  d="M88.12156703782944,29.725232089881683A93,93,0,0,1,55.501437463108275,74.62298867995493L44.567778295251266,59.574097876722654A74.4,74.4,0,0,0,70.43053488282992,23.977067296032654Z"
                  fill="#ac2740"
                  opacity="1"
                  stroke="rgb(120, 27, 45)"
                  stroke-width="0"
                />
                <path
                  d="M53.81979226115179,75.84477543619248A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,42.88613309329479,60.7958846329602Z"
                  fill="#9a85ec"
                  opacity="1"
                  stroke="rgb(108, 93, 165)"
                  stroke-width="0"
                />
                <path
                  d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-53.819792261151775,75.84477543619249L-42.886133093294774,60.79588463296021A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                  fill="#ff602e"
                  opacity="1"
                  stroke="rgb(179, 67, 32)"
                  stroke-width="0"
                />
                <path
                  d="M-55.501437463108275,74.62298867995493A93,93,0,0,1,-88.12156703782944,29.725232089881704L-70.4305348828299,23.97706729603268A74.4,74.4,0,0,0,-44.56777829525128,59.57409787672265Z"
                  fill="#483800"
                  opacity="1"
                  stroke="rgb(50, 39, 0)"
                  stroke-width="0"
                />
                <path
                  d="M-88.76389834795864,27.748339591284847A93,93,0,0,1,-88.76389834795864,-27.748339591284825L-71.07286619295913,-22.0001747974358A74.4,74.4,0,0,0,-71.07286619295911,22.000174797435818Z"
                  fill="#02a5ad"
                  opacity="1"
                  stroke="rgb(1, 115, 121)"
                  stroke-width="0"
                />
                <path
                  d="M-88.12156703782944,-29.72523208988168A93,93,0,0,1,-55.50143746310825,-74.62298867995493L-44.567778295251294,-59.57409787672264A74.4,74.4,0,0,0,-70.43053488282992,-23.977067296032665Z"
                  fill="#ffa488"
                  opacity="1"
                  stroke="rgb(179, 115, 95)"
                  stroke-width="0"
                />
                <path
                  d="M-53.819792261151825,-75.84477543619245A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-42.88613309329479,-60.7958846329602Z"
                  fill="#96edf2"
                  opacity="1"
                  stroke="rgb(105, 166, 169)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <ul
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="chart-legend-compute"
          aria-describedby="chart-legend-compute"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-compute"
            />
            <div
              class="emotion-10 emotion-11"
              color="#5e47be"
              id="chart-legend-compute"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Compute
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-gpu"
          aria-describedby="chart-legend-gpu"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-gpu"
            />
            <div
              class="emotion-28 emotion-11"
              color="#0083e6"
              id="chart-legend-gpu"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                GPU Instances
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-functions"
          aria-describedby="chart-legend-functions"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-functions"
            />
            <div
              class="emotion-46 emotion-11"
              color="#3ebd8f"
              id="chart-legend-functions"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Serverless Functions
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-containers"
          aria-describedby="chart-legend-containers"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-containers"
            />
            <div
              class="emotion-64 emotion-11"
              color="#ac2740"
              id="chart-legend-containers"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Serverless Containers
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-s3"
          aria-describedby="chart-legend-s3"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-s3"
            />
            <div
              class="emotion-82 emotion-11"
              color="#9a85ec"
              id="chart-legend-s3"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Object Storage
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-dns"
          aria-describedby="chart-legend-dns"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-dns"
            />
            <div
              class="emotion-100 emotion-11"
              color="#ff602e"
              id="chart-legend-dns"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Domain zones
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-appleSilicon"
          aria-describedby="chart-legend-appleSilicon"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-appleSilicon"
            />
            <div
              class="emotion-118 emotion-11"
              color="#483800"
              id="chart-legend-appleSilicon"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Apple Silicon
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-baremetal"
          aria-describedby="chart-legend-baremetal"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-baremetal"
            />
            <div
              class="emotion-136 emotion-11"
              color="#02a5ad"
              id="chart-legend-baremetal"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Baremetal
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-database"
          aria-describedby="chart-legend-database"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-database"
            />
            <div
              class="emotion-154 emotion-11"
              color="#ffa488"
              id="chart-legend-database"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Database
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
        <div
          aria-controls="chart-legend-lb"
          aria-describedby="chart-legend-lb"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <li
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-testid="chart-legend-lb"
            />
            <div
              class="emotion-172 emotion-11"
              color="#96edf2"
              id="chart-legend-lb"
            />
            <div
              class="emotion-12 emotion-13"
            >
              <span
                class="emotion-14 emotion-15"
              >
                Load Balancer
              </span>
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                />
              </span>
            </div>
            <div
              class="emotion-20 emotion-21"
            >
              20
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart > renders correctly with no props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      height="206"
    >
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <svg
            height="206"
            role="img"
            width="206"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs
              aria-hidden="true"
            >
              <pattern
                height="5"
                id="lines"
                patternUnits="userSpaceOnUse"
                width="5"
              >
                <rect
                  fill="inherit"
                  height="5"
                  stroke="rgba(255, 0, 0, 0.1)"
                  stroke-width="0"
                  width="5"
                />
                <path
                  d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                  stroke="#222638"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </pattern>
            </defs>
            <rect
              fill="transparent"
              height="206"
              width="206"
            />
            <g
              transform="translate(10,10)"
            >
              <g
                transform="translate(93,93)"
              >
                <path
                  d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M-1.3667058278484462e-14,-74.4A74.4,74.4,0,1,0,1.3667058278484462e-14,74.4A74.4,74.4,0,1,0,-1.3667058278484462e-14,-74.4Z"
                  fill="#5e47be"
                  opacity="1"
                  stroke="rgb(66, 50, 133)"
                  stroke-width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
